--- a/Css/Style.css
+++ b/Css/Style.css
@@ -8,9 +8,10 @@
 header {
     position: relative;
     display: flex;
-    width: 1005;
+    width: 100%;
     height: 15vh;
     align-items: center;
+
 }
 
 .top-header {
@@ -122,6 +123,45 @@ header .li a:hover {
     position: relative;
     width: 100%;
     height: 100vh;
+}
+
+.previous-arrow,
+.next-arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.previous-arrow i {
+    padding: 15px 15px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+}
+
+.next-arrow i {
+    padding: 15px 15px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+}
+
+.previous-arrow {
+    width: 15%;
+    height: 110vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.next-arrow {
+    width: 15%;
+    height: 110vh;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .banner-content {
@@ -803,13 +843,14 @@ header .li a:hover {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
     padding: 0px 25px;
     margin-top: 20px;
+    border-radius: 8px;
 }
 
 .phone-emaila .phone {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 6px;
 }
 
 .phone,
@@ -851,9 +892,11 @@ footer {
     justify-content: center;
     align-items: center;
 }
-.footer{
+
+.footer {
     margin-top: 60rem;
 }
+
 /* home page end */
 
 /* Properties styling start */
@@ -1006,6 +1049,7 @@ footer {
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
     margin-top: 3rem;
 }
 
