--- a/Css/Style.css
+++ b/Css/Style.css
@@ -116,20 +116,67 @@ header .li a:hover {
     font-weight: 700;
     font-style: normal;
     font-size: 28px;
-    color: #1e1e1e;
+    color: #000;
 }
 
+.js-preloader.loaded {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.js-preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.99);
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    z-index: 9999;
+    transition: opacity 0.25s ease;
+}
+
+
+/* Three moving dots */
+.js-preloader .dots span {
+  width: 20px;
+  height: 20px;
+  background-color: #f35525;  
+  border-radius: 50%;
+  display: inline-block;
+  margin: 0 4px;
+  animation: bounce 1.4s infinite ease-in-out both;
+}
+
+/* Delay for animation */
+.js-preloader .dots span:nth-child(1) { animation-delay: 0s; }
+.js-preloader .dots span:nth-child(2) { animation-delay: 0.2s; }
+.js-preloader .dots span:nth-child(3) { animation-delay: 0.4s; }
+
+/* Animations */
+@keyframes bounce {
+  0%, 80%, 100% { transform: scale(0); }
+  40% { transform: scale(1); }
+}
 .banner {
     position: relative;
     width: 100%;
     height: 100vh;
+    object-fit: cover;
 }
+
 
 .previous-arrow,
 .next-arrow {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .previous-arrow i {
@@ -256,7 +303,14 @@ header .li a:hover {
     margin-left: 25px;
     margin-top: 3rem;
 }
-
+.link p {
+display: none;
+margin-top: 10px;
+color: #f35525;
+}
+.link h3{
+    cursor: pointer;
+}
 .Featured-content .link h3 {
     color: #1e1e1e;
     font-family: "Poppins", sans-serif;
@@ -494,6 +548,7 @@ header .li a:hover {
     font-style: normal;
     font-size: 16px;
     border: none;
+    cursor: pointer;
 }
 
 .deal-info-button button:hover {
@@ -961,8 +1016,20 @@ footer {
 .product-properties {
     width: 100%;
     height: 330vh;
+    
+}
+ .product-properties {
+    min-height: 650px; /* or whatever fits your layout */
+}
+.property-row {
+    display: flex;
+    flex-wrap: wrap; /* if you have multiple products in a row */
+    gap: 20px;
 }
 
+.product {
+    display: block; /* default */
+}
 .next-page {
     width: 100%;
     height: 25vh;
